force-app/main/default/objects/Timecard_Item__c/Timecard_Item__c.object-meta.xml
<CustomObject>
    <description>A line item which represents a bucket of hours for a specific unit of time. Rolls up to Time card.

TO DO: better description</description>
    <label>Time Entry Item</label>
    <nameField>
        <displayFormat>TEI-{00000000}</displayFormat>
        <label>Time Entry Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entry Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>