force-app/main/default/objects/Timecard_Item__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Volunteer assignment associated to this time entry.</description>
    <inlineHelpText>Volunteer assignment associated to this time entry.</inlineHelpText>
    <label>Assignment</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 OR 2 OR 3) AND (4 AND 5 AND 6 AND 7 AND 8)</booleanFilter>
        <errorMessage>Assignment does not exist or is not accessible by current user.</errorMessage>
        <filterItems>
            <field>$User.ContactId</field>
            <operation>equals</operation>
            <valueField>Volunteer_Assignment__c.Contact__r.Id</valueField>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>contains</operation>
            <value>Staff</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator, System Integrator</value>
        </filterItems>
        <filterItems>
            <field>Volunteer_Assignment__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Volunteer_Assignment__c.Position__r.Name</field>
            <operation>notContain</operation>
            <value>&quot;DS-&quot;</value>
        </filterItems>
        <filterItems>
            <field>Volunteer_Assignment__c.Position__r.Name</field>
            <operation>notContain</operation>
            <value>&quot;CH-&quot;</value>
        </filterItems>
        <filterItems>
            <field>Volunteer_Assignment__c.Position__r.Enterprise_Level_Program__c</field>
            <operation>notContain</operation>
            <value>&quot;Chapters&quot;</value>
        </filterItems>
        <filterItems>
            <field>Volunteer_Assignment__c.Position__r.Time_Entry_Tracking__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filterItems>
        <infoMessage>In order to search for your assignments, type AS* in the search bar and press Go.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Volunteer_Assignment__c</referenceTo>
    <relationshipLabel>Time Entry Items</relationshipLabel>
    <relationshipName>Timecard_Items</relationshipName>
    <type>Lookup</type>
</CustomField>