force-app/main/default/objects/Timecard_Item__c/fields/Candidate_Submission__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate Submission</label>
    <type>Checkbox</type>
</CustomField>