force-app/main/default/objects/Timecard_Item__c/fields/Grant_Contact__c.field-meta.xml
<CustomField>
    <fullName>Grant_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to Grant Contact object for derive and populate grant name on time entry item record.</description>
    <inlineHelpText>For Experience Corps assignments only.  Please select the grant associated with these hours.</inlineHelpText>
    <label>Grant</label>
    <referenceTo>Grant_Contact__c</referenceTo>
    <relationshipLabel>Time Entry Items</relationshipLabel>
    <relationshipName>Time_Entry_Items</relationshipName>
    <type>Lookup</type>
</CustomField>