force-app/main/default/objects/Timecard_Item__c/fields/Month_Beginning_Date__c.field-meta.xml
<CustomField>
    <fullName>Month_Beginning_Date__c</fullName>
    <description>Captures the first of the month for a time entry item. This field is auto-populated through code and is used primarily  for reporting purposes.</description>
    <label>Month Beginning Date</label>
    <type>Date</type>
</CustomField>