force-app/main/default/objects/Timecard_Item__c/fields/Monthly_Grant_Hours__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Grant_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Monthly Grant Hours</label>
    <referenceTo>Monthly_Grant_Hours__c</referenceTo>
    <relationshipLabel>Time Entry Items</relationshipLabel>
    <relationshipName>Time_Entry_Items</relationshipName>
    <type>Lookup</type>
</CustomField>