force-app/main/default/objects/Timecard_Item__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional notes related to this timecard item.</description>
    <inlineHelpText>Enter any clarifying comments in this section if necessary.</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>