force-app/main/default/objects/Timecard_Item__c/fields/Saturday__c.field-meta.xml
<CustomField>
    <fullName>Saturday__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Time entered for Saturday in hours with 15 minute sub-units.</description>
    <inlineHelpText>Time entered for Saturday in hours with 15 minute sub-units.</inlineHelpText>
    <label>Saturday</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>