force-app/main/default/objects/Timecard_Item__c/fields/Service_Hour_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Hour_Type__c</fullName>
    <description>Service hour type: direct and indirect.</description>
    <inlineHelpText>Select service hour type: direct for community/volunteer related hours, and indirect for meetings, training, etc.</inlineHelpText>
    <label>Service Hour Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Service Hours</fullName>
            </value>
            <value>
                <fullName>Indirect Service Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>