force-app/main/default/objects/Timecard_Item__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Captures status of a submitted time request.</description>
    <inlineHelpText>Time submissions can have the following statuses: 
Not Submitted
Submitted
Pending 2nd Approval
Approved
Rejected</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending 2nd Approval</fullName>
            </value>
            <value>
                <fullName>Rejected by 2nd Approver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>