force-app/main/default/objects/Timecard_Item__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <description>Date that time entry is submitted.</description>
    <inlineHelpText>Date that time entry is submitted.</inlineHelpText>
    <label>Submitted Date</label>
    <type>DateTime</type>
</CustomField>