force-app/main/default/objects/Timecard_Item__c/fields/Timecard__c.field-meta.xml
<CustomField>
    <fullName>Timecard__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The parent timecard for this particular item.</description>
    <inlineHelpText>The parent timecard for this particular item.</inlineHelpText>
    <label>Time Entry</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$User.ContactId</field>
            <operation>equals</operation>
            <valueField>Timecard__c.Contact__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Timecard__c</referenceTo>
    <relationshipName>Timecard_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>