force-app/main/default/objects/Timecard_Item__c/fields/Timecard_Item_Total__c.field-meta.xml
<CustomField>
    <fullName>Timecard_Item_Total__c</fullName>
    <description>Timecard Item subtotal.</description>
    <formula>Sunday__c + Monday__c + Tuesday__c + Wednesday__c + Thursday__c + Friday__c + Saturday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Timecard Item subtotal.</inlineHelpText>
    <label>Time Entry Item Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>