force-app/main/default/objects/Timecard_Item__c/fields/Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Tuesday__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Time entered for Tuesday in hours with 15 minute sub-units.</description>
    <inlineHelpText>Time entered for Tuesday in hours with 15 minute sub-units.</inlineHelpText>
    <label>Tuesday</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>