force-app/main/default/objects/Timecard_Item__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <description>Name of volunteer on related time entry record.</description>
    <formula>Timecard__r.Contact__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Name of volunteer on related time entry record.</inlineHelpText>
    <label>Volunteer</label>
    <type>Text</type>
</CustomField>