force-app/main/default/objects/Timecard_Item__c/fields/Week_Beginning_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_Beginning_Date__c</fullName>
    <description>Week beginning date on related time entry record.</description>
    <formula>Timecard__r.Week_Beginning_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Week beginning date on related time entry record.</inlineHelpText>
    <label>Week Beginning Date</label>
    <type>Date</type>
</CustomField>