force-app/main/default/objects/Timecard_Item__c/fields/Week_Of__c.field-meta.xml
<CustomField>
    <fullName>Week_Of__c</fullName>
    <label>Week Of</label>
    <type>Date</type>
</CustomField>