force-app/main/default/objects/Timecard_Item__c/listViews/Time_Approvers_Experience_Corps_Timecard_Item.listView-meta.xml
<ListView>
    <fullName>Time_Approvers_Experience_Corps_Timecard_Item</fullName>
    <filterScope>Queue</filterScope>
    <label>Time Approvers: Experience Corps</label>
    <queue>Time_Approvers_Experience_Corps</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>