force-app/main/default/objects/Timecard_Item__c/listViews/Time_Approvers_Life_Reimagined_Timecard_Item.listView-meta.xml
<ListView>
    <fullName>Time_Approvers_Life_Reimagined_Timecard_Item</fullName>
    <filterScope>Queue</filterScope>
    <label>Time Approvers: Life Reimagined</label>
    <queue>Time_Approvers_Life_Reimagined</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>