force-app/main/default/objects/Timecard_Item__c/listViews/Time_Approvers_States_Timecard_Item.listView-meta.xml
<ListView>
    <fullName>Time_Approvers_States_Timecard_Item</fullName>
    <filterScope>Queue</filterScope>
    <label>Time Approvers: States</label>
    <queue>Time_Approvers_States</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>